# t_score

./: LICENSE  README.md
docker/: Dockerfile  docker_build.sh  docker_run.sh  docker_stop.sh  entrypoint.sh
ros2_ws/src/RoughSense/: CMakeLists.txt  package.xml
ros2_ws/src/RoughSense/config/: params.json
ros2_ws/src/RoughSense/include/RoughSense/: Dsp.hpp  DynamicGrid.hpp  MapCreator.hpp  ROSWrapper.hpp  Ransac.hpp  Roughness.hpp
ros2_ws/src/RoughSense/launch/: roughness_launch.py
ros2_ws/src/RoughSense/src/: Dsp.cpp  DynamicGrid.cpp  MapCreator.cpp  ROSWrapper.cpp  Ransac.cpp  Roughness.cpp
ros2_ws/src/t_score/: CMakeLists.txt  package.xml
ros2_ws/src/t_score/config/: params.json
ros2_ws/src/t_score/include/t_score/: GridManager.hpp  ROSWrapper.hpp  TScore.hpp
ros2_ws/src/t_score/launch/: t_score_launch.py
ros2_ws/src/t_score/src/: GridManager.cpp  ROSWrapper.cpp  TScore.cpp
