<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>RoughSense</name>
  <version>1.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="XX.XX@uni.xx">XX</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclpp</build_depend>
  <build_depend>roscpp</build_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>roscpp</test_depend>

  <!-- Documentation for external dependency -->
  <depend>pcl_conversions</depend>
  <depend>pcl_1.3</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <!-- Liquid-DSP is a system dependency. Install via: sudo apt-get install libliquid-dev -->
  </export>
</package>
